--- a/frontend/app/assets/stylesheets/archivesspace/tree.less
+++ b/frontend/app/assets/stylesheets/archivesspace/tree.less
@@ -33,7 +33,15 @@
     background-position: -408px -120px !important;
   } 
   
-  .resource > a > .jstree-icon {
+  .analog > a > .jstree-icon {
     background-position: -24px  -24px !important;
+  }
+  
+  .digital > a > .jstree-icon {
+    background-position: -456px -24px !important;
+  }
+  
+  .collection > a > .jstree-icon {
+    background-position: -264px -24px !important;
   }
 }
