--- a/frontend/app/views/archival_objects/_form_container.html.erb
+++ b/frontend/app/views/archival_objects/_form_container.html.erb
@@ -4,7 +4,7 @@
   <button class="btn btn-small">Do something else</button>
   <button class="btn btn-small">Do something else</button>
 </div>
-<h2>New Resource</h2>
+<h2>New Archival Object</h2>
 <br/>
 <div class="tabbable tabs-left">
   <ul class="nav nav-tabs">
@@ -33,6 +33,6 @@
   </div>
 </div>
 <div class="form-actions">            
-   <button type="submit" class="btn btn-primary">Save Resource</button>
+   <button type="submit" class="btn btn-primary">Save Archival Object</button>
    <%= link_to "Cancel", :back, :class=>"btn" %>
 </div>
