--- a/frontend/app/assets/stylesheets/archivesspace/common.less
+++ b/frontend/app/assets/stylesheets/archivesspace/common.less
@@ -28,3 +28,35 @@ h2 > .label {
 .modal > form {
    margin-bottom: 0;
 }
+
+.btn-toolbar >.btn-group + .btn-group {
+  margin-left: -5px;
+}
+
+.btn-toolbar > .btn-group > .btn, 
+.btn-toolbar > .btn-group > .dropdown-toggle
+{
+    -webkit-border-radius: 0px;
+    border-radius: 0px;
+    -moz-border-radius: 0px;
+}
+
+.btn-toolbar > .btn-group:first-child > .btn, 
+.btn-toolbar > .btn-group:first-child > .dropdown-toggle{
+    -webkit-border-bottom-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    -webkit-border-top-left-radius: 4px;
+    border-top-left-radius: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    -moz-border-radius-topleft: 4px;    
+}
+
+.btn-toolbar > .btn-group:last-child > .btn:last-child, 
+.btn-toolbar > .btn-group:last-child > .dropdown-toggle:nth-last-child(2){
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
+    -moz-border-radius-bottomright: 4px;
+    -moz-border-radius-topright: 4px;    
+}
