--- a/frontend/app/views/archival_objects/index.html.erb
+++ b/frontend/app/views/archival_objects/index.html.erb
@@ -1,13 +1,13 @@
-<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>["Browse Resources"]} %>
+<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>["Browse Archival Objects"]} %>
 <div class="row-fluid">
    <div class="span3">
       <div class="well">The facets/search filters will go here</div>
    </div>
    <div class="span9">
       <div class="btn-group" style="float: right">
-        <%= link_to "Create Resource", {:controller=>:archival_objects, :action=>:new}, :class=>"btn" %>
+        <%= link_to "Create Archival Resource", {:controller=>:archival_objects, :action=>:new}, :class=>"btn" %>
       </div>
-      <h2>Resources</h2>
+      <h2>Archival Objects</h2>
       <table class="table table-striped table-bordered table-condensed">
         <thead>
           <tr>
