--- a/frontend/app/views/archival_objects/new.html.erb
+++ b/frontend/app/views/archival_objects/new.html.erb
@@ -1,26 +1,24 @@
-<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Resources", :controller=>:archival_objects, :action=>:index),"Create a Resource"]} %>
+<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Archival Objects", :controller=>:archival_objects, :action=>:index),"New Archival Object"]} %>
 <div class="row-fluid">
    <div class="span3">
-     <div class="well">
-      <div class="archives-tree">
-        <ul class="jstree-classic">
-      		<li  id="root" class="resource" rel="resource"><a href="#">New Resource</a></li> 			    
-      	</ul>
-      </div>
-      <div class="btn-group archives-tree-toolbar" rel>
+     <div class="well">      
+      <%= render "archival_objects/hierarchy" %>      
+      <div class="btn-toolbar archives-tree-toolbar">         
         <div class="btn-group dropup">
           <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
-              Add
-              <span class="caret"></span>
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="add-container-action" href="javascript:void(0);">Add a Container</a></li>
-              <li><a class="add-resource-action" href="javascript:void(0);">Add a Resource</a></li>
-            </ul>
-        </div>
-      </div>
-    </div>
-   </div>
+            Add
+            <span class="caret"></span>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="add-analog-action" href="javascript:void(0);"><span class="icon-file"></span> Analog Object</a></li>
+            <li><a class="add-digital-action" href="javascript:void(0);"><span class="icon-barcode"></span> Digital Object</a></li>
+            <li><a class="add-logical-action" href="javascript:void(0);"><span class="icon-folder-close"></span> Logical Object</a></li>
+          </ul>
+        </div> <!-- btn-group dropup -->
+        <a class="btn btn-mini" href="#">Link</a> 
+      </div> <!-- btn-toolbar archives-tree-toolbar -->
+    </div> <!-- well -->
+   </div> <!-- span3 -->
    <div class="span9" id="archival_object_container">
       <%= render :partial=>"archival_objects/form_container" %>
    </div>
