--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Accessions", :controller=>:accessions, :action=>:index %></li>
-                <li><%= link_to "Resources", :controller=>:archival_objects, :action=>:index %></li>
+                <li><%= link_to "Archival Objects", :controller=>:archival_objects, :action=>:index %></li>
                 <li><a href="#">Digital Objects</a></li>
                 <li><a href="#">Names</a></li>
                 <li><a href="#">Subjects</a></li>                
@@ -28,7 +28,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Accession", :controller=>:accessions, :action=>:new %></li>
                 <li class="divider"></li>
-                <li><%= link_to "Resource", :controller=>:archival_objects, :action=>:new %></li>
+                <li><%= link_to "Archival Object", :controller=>:archival_objects, :action=>:new %></li>
                 <li><a href="#">Digital Object</a></li>
                 <li><a href="#">Name</a></li>
                 <li><a href="#">Subject</a></li>
@@ -45,7 +45,7 @@
                 <ul class="dropdown-menu">
                    <li><a href="#">All Records</a></li>
                    <li class="divider"></li>
-                   <li><a href="#">Resources</a></li>
+                   <li><a href="#">Archival Objects</a></li>
                    <li><a href="#">Digital Objects</a></li>
                    <li><a href="#">Names</a></li>
                    <li><a href="#">Subjects</a></li>
