--- a/frontend/app/views/archival_objects/new.html.erb
+++ b/frontend/app/views/archival_objects/new.html.erb
@@ -15,7 +15,7 @@
             <li><a class="add-logical-action" href="javascript:void(0);"><span class="icon-folder-close"></span> Logical Object</a></li>
           </ul>
         </div> <!-- btn-group dropup -->
-        <a class="btn btn-mini" href="#">Link</a> 
+        <div class="btn-group"><a class="btn btn-mini" href="#">Link</a></div>
       </div> <!-- btn-toolbar archives-tree-toolbar -->
     </div> <!-- well -->
    </div> <!-- span3 -->
