--- a/frontend/app/views/archival_objects/index.html.erb
+++ b/frontend/app/views/archival_objects/index.html.erb
@@ -5,7 +5,7 @@
    </div>
    <div class="span9">
       <div class="btn-group" style="float: right">
-        <%= link_to "Create Archival Resource", {:controller=>:archival_objects, :action=>:new}, :class=>"btn" %>
+        <%= link_to "Create Archival Object", {:controller=>:archival_objects, :action=>:new}, :class=>"btn" %>
       </div>
       <h2>Archival Objects</h2>
       <table class="table table-striped table-bordered table-condensed">
