--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -1,23 +1,14 @@
-<%= semantic_form_for @repository, :as=>"repository", :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
+<%= form_for @repository, :as=>"repository", :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
    <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">×</button>
     <h3>Create Repository</h3>
    </div>
-   <div class="modal-body">
-      <%= render "shared/errors"%>
+   <div class="modal-body">     
+      <%= render "shared/errors", :object => @repository, :errors => @errors, :warnings => @warnings %>
+      
       <fieldset>
-       <div class="control-group">
-          <label class="control-label" for="repo_id">Repository Id</label>
-          <div class="controls">
-            <%= f.text_field :repo_id, :size=>10 %>
-          </div>
-        </div>
-        <div class="control-group">
-           <label class="control-label" for="description">Description</label>
-           <div class="controls">
-             <%= f.text_area :description, :rows=>3 %>
-           </div>
-         </div>
+        <%= f.label_field_pair :repo_id, f.text_field(:repo_id, :size=>10), {:errors=>@errors, :warnings=>@warnings} %>
+        <%= f.label_field_pair :description, f.text_area(:description, :rows=>3), {:errors=>@errors, :warnings=>@warnings} %>
       </fieldset>
    </div>
    <div class="modal-footer">
