--- a/frontend/app/views/archival_objects/_hierarchy.html.erb
+++ b/frontend/app/views/archival_objects/_hierarchy.html.erb
@@ -1,10 +1,5 @@
 <div class="archives-tree">
   <ul class="jstree-classic">
-    <li id="root" class="collection" rel="collection">
-      <a href="#">New Collection</a>
-      <ul>
-		    <li id="newAnalogObject" class="analog selected" rel="analog"><a href="#">New Analog Object</a></li>
-		  </ul>
-		</li>
-	</ul>
+    <li id="root" class="analog selected" rel="analog"><a href="#">New Archival Object</a></li>
+  </ul>
 </div>
