--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -12,26 +12,26 @@
     <hr />
     
     <div class="control-group">
-       <%= f.label :resource_link, "Link to a Resource", :class=>"control-label" %>
+       <%= f.label :collection_link, "Link to a Collection", :class=>"control-label" %>
       <div class="controls">
-      <div class="accordion controls-accordion" id="resource_link">
+      <div class="accordion controls-accordion" id="collection_link">
          <div class="accordion-group">
-            <label class="radio" data-toggle="collapse" data-parent="#resource_link" href="#resource_link_defer">
-               <%= f.radio_button :resource_link, "defer" %> Defer linking to a Resource
+            <label class="radio" data-toggle="collapse" data-parent="#collection_link" href="#collection_link_defer">
+               <%= f.radio_button :collection_link, "defer" %> Defer linking to a Collection
             </label>
-           <div id="resource_link_defer" class="accordion-body collapse">
+           <div id="collection_link_defer" class="accordion-body collapse">
              <div class="accordion-inner">
                 <div class="alert alert-info">
-                  Create this Accession without a Resource.  You can create that link later.
+                  Create this Accession without a Collecion.  You can create that link later.
                 </div>
              </div>
            </div>
          </div>
          <div class="accordion-group">
-             <label class="radio" data-toggle="collapse" data-parent="#resource_link" href="#resource_link_existing">
-                <%= f.radio_button :resource_link, "existing" %> Existing Resource
+             <label class="radio" data-toggle="collapse" data-parent="#collection_link" href="#collection_link_existing">
+                <%= f.radio_button :collection_link, "existing" %> Existing Collection
              </label>
-           <div id="resource_link_existing" class="accordion-body collapse">
+           <div id="collection_link_existing" class="accordion-body collapse">
              <div class="accordion-inner">
                 <div class="alert alert-error">
                   TODO!
@@ -40,13 +40,13 @@
            </div>
          </div>
          <div class="accordion-group">
-             <label class="radio" data-toggle="collapse" data-parent="#resource_link" href="#resource_link_create">
-                <%= f.radio_button :resource_link, "create" %> Create a new Resource
+             <label class="radio" data-toggle="collapse" data-parent="#collection_link" href="#collection_link_create">
+                <%= f.radio_button :collection_link, "create" %> Create a new Collection
              </label>
-           <div id="resource_link_create" class="accordion-body collapse">
+           <div id="collection_link_create" class="accordion-body collapse">
              <div class="accordion-inner">
                 <div class="alert alert-info">
-                   Create this Accession and Continue to Create a new Resource.
+                   Create this Accession and Continue to Create a new Collection.
                 </div>
              </div>
            </div>
