--- a/frontend/app/views/collections/index.html.erb
+++ b/frontend/app/views/collections/index.html.erb
@@ -7,18 +7,33 @@
       <div class="btn-group" style="float: right">
         <%= link_to "Create Collection", {:controller=>:collections, :action=>:new}, :class=>"btn" %>
       </div>
-      <h2>Collections</h2>
-      <table class="table table-striped table-bordered table-condensed">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Identifier</th>
-            <th>Linked Resource</th>
-            <th width="70px"><!-- actions --></th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
+      <% if not @collections.blank? %>
+         <h2>Collections</h2>
+         <table class="table table-striped table-bordered table-condensed">
+           <thead>
+             <tr>
+               <th>Title</th>
+               <th width="70px"><!-- actions --></th>
+             </tr>
+           </thead>
+           <tbody>
+            <% @collections.each do |collection| %>
+               <tr>
+                <td><%= collection.title %></td>
+                <td>
+                   <div class="btn-group" style="float: right">
+                     <%= link_to "View", {:controller=>:collections, :action=>:show, :id=>collection.id}, :class=>"btn btn-mini" %>
+                     <%= link_to "Edit", {:controller=>:collections, :action=>:edit, :id=>collection.id}, :class=>"btn btn-mini" %>
+                   </div>
+                </td>
+              </tr>
+            <% end %>
+           </tbody>
+         </table>
+      <% else %>
+         <p class="alert alert-info">
+            There are currently no accessions in this, <strong><%= session[:repo_id] %></strong>, repository.
+         </p>
+      <% end %>
    </div>
 </div>
