--- a/frontend/app/views/collections/_hierarchy_children.html.erb
+++ b/frontend/app/views/collections/_hierarchy_children.html.erb
@@ -1,10 +1,10 @@
 <% if not children.blank? %>
    <ul>
       <% children.each do |child| %>
-         <li class="analog" rel="analog" id="<%= child['id'] %>">
-            <a href="#"><%= child['title'] %></a>
-            <%= render :partial=>"collections/hierarchy_children", :locals=>{:children=>child['children']} %>
-         </li>
+         <li class="analog <% if selected.to_i === child['id'].to_i %>selected<% end %>" rel="analog" id="<%= child['id'] %>">            
+            <%= link_to child['title'], :controller=>:archival_objects, :action=>controller.action_name, :id=>child['id'], :collection_id=>collection_id %>
+            <%= render :partial=>"collections/hierarchy_children", :locals=>{:children=>child['children'], :collection_id=>collection_id, :selected=>selected} %>
+         </li>        
       <% end %>
    </ul>
 <% end %>
