--- a/frontend/app/views/archival_objects/index.html.erb
+++ b/frontend/app/views/archival_objects/index.html.erb
@@ -8,17 +8,22 @@
         <%= link_to "Create Archival Object", {:controller=>:archival_objects, :action=>:new}, :class=>"btn" %>
       </div>
       <h2>Archival Objects</h2>
-      <table class="table table-striped table-bordered table-condensed">
-        <thead>
-          <tr>
-            <th>Title</th>
-            <th>Identifier</th>
-            <th>Linked Resource</th>
-            <th width="70px"><!-- actions --></th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
+      <% if not @archival_objects.blank? %>
+         <table class="table table-striped table-bordered table-condensed">
+           <thead>
+             <tr>
+               <th>Title</th>
+               <th>Identifier</th>
+               <th width="70px"><!-- actions --></th>
+             </tr>
+           </thead>
+           <tbody>
+           </tbody>
+         </table>
+      <% else %>
+      <p class="alert alert-info">
+         There are currently no Archival Objects in this, <strong><%= session[:repo_id] %></strong>, repository.
+      </p>
+      <% end %>
    </div>
 </div>
