--- a/frontend/app/views/collections/index.html.erb
+++ b/frontend/app/views/collections/index.html.erb
@@ -32,7 +32,7 @@
          </table>
       <% else %>
          <p class="alert alert-info">
-            There are currently no accessions in this, <strong><%= session[:repo_id] %></strong>, repository.
+            There are currently no Collections in this, <strong><%= session[:repo_id] %></strong>, repository.
          </p>
       <% end %>
    </div>
