Changes for the frontend

--- a/frontend/app/views/archival_objects/index.html.erb
+++ b/frontend/app/views/archival_objects/index.html.erb
@@ -22,7 +22,7 @@
          </table>
       <% else %>
       <p class="alert alert-info">
-         There are currently no Archival Objects in this, <strong><%= session[:repo_id] %></strong>, repository.
+         There are currently no Archival Objects in this, <strong><%= session[:repo] %></strong>, repository.
       </p>
       <% end %>
    </div>
