--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -38,7 +38,7 @@
          </table>
       <% else %>
          <p class="alert alert-info">
-            There are currently no accessions in this, <strong><%= session[:repo_id] %></strong>, repository.
+            There are currently no accessions in this, <strong><%= session[:repo] %></strong>, repository.
          </p>
       <% end %>
    </div>
