--- a/frontend/app/views/collections/new.html.erb
+++ b/frontend/app/views/collections/new.html.erb
@@ -2,7 +2,7 @@
 <div class="row-fluid">
    <div class="span3">
      <div class="well">
-         Save your Collection to then begin modifying it's hierarchy.
+         Save your Collection to then begin modifying its hierarchy.
     </div> <!-- well -->
    </div> <!-- span3 -->
    <div class="span9" id="archival_object_container">
