--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -18,6 +18,8 @@
              <% end %>
            </div>
       <% end %>
+      <br/>
+      <input type="submit" name="ignorewarnings" class="btn btn-warning" value="Save Anyway" />
    </div>
 <% end %>
 <% if flash[:success] %>
