--- a/frontend/app/views/accessions/new.html.erb
+++ b/frontend/app/views/accessions/new.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Accessions", :controller=>:accessions, :action=>:index),"Create an Accession"]} %>
+<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Accessions", :controller=>:accessions, :action=>:index),"New Accession"]} %>
 <div class="row-fluid">
    <div class="span3">
       <div class="well">
@@ -6,11 +6,11 @@
       </div>
    </div>
    <div class="span9">
-      <h2>Create an Accession</h2>
+      <h2>New Accession</h2>
       <%= form_for @accession, :as => "accession", :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
          <%= render :partial=>"accessions/form", :locals=>{:f=>f} %>
-         <div class="form-actions">            
-            <button type="submit" class="btn btn-primary">Create Accession</button>
+         <div class="form-actions">
+            <button type="submit" class="btn btn-primary">Save Accession</button>
             <%= link_to "Cancel", :back, :class=>"btn" %>
          </div>
       <% end %>
