--- a/frontend/app/assets/javascripts/collections.edit.js.erb
+++ b/frontend/app/assets/javascripts/collections.edit.js.erb
@@ -9,15 +9,15 @@ $(function() {
 
     var renderTree = function() {
         $("#archives_tree").html(AS.renderTemplate("tree_template", {tree: collection_tree_data}));
-    };
+        $tree = $("#archives_tree");
+     }
 
     var rerenderTree = function() {
-        var open_node_ids = [];
-        $(".jstree-open", $tree).map(function() {
-            open_node_ids.push($(this).attr("id"));
-        });
-
         var selected_node_id = $(".selected", $tree).attr("id");
+        
+        if (selected_node_id === "newAO") {
+           selected_node_id = "archival_object_" + $("#ao_id", "#object_container").val();
+        }
 
         $.getJSON(APP_PATH + "collections/" + collection_tree_data.collection_id + "/tree", function(json) {
             collection_tree_data = json;
@@ -26,59 +26,55 @@ $(function() {
 
             $("#"+selected_node_id, $tree).addClass("selected");
 
-            for (var i=0; i<open_node_ids.length; i++) {
-            $("#"+open_node_ids[i], $tree).addClass("jstree-open");
-            }
-
             initTree();
         });
     };
    
+    var initForm = function(html) {
+      $("#object_container").html(html);         
+
+      var $form = $("form", "#object_container");
+
+      $(".btn-cancel", $form).html("Revert Changes");
+      $(".btn-cancel", $form).before("<a id='save_and_finish_editing' class='btn btn-success' href='" + APP_PATH + "collections/" + collection_tree_data.collection_id + "'>Finish Editing</a>");
+      
+      $form.bind("form-changed", function() {
+          form_changed = true;                
+      });
+
+      $form.ajaxForm({
+          data: {
+             inline: true
+          },
+          beforeSubmit: function() {
+            $(".btn-primary", $form).attr("disabled","disabled");
+          },
+          success: function(response, status, xhr) {
+             initForm(response);
+             if ($("#object_container").find(".alert-error:first").length) {
+
+             } else {
+                form_changed = false;
+                rerenderTree();
+             }
+          }, 
+          error: function(obj, errorText, errorDesc) {
+            $(".btn-primary", $form).removeAttr("disabled");
+          }
+       });
+  };
+   
    var loadPaneForNode = function(nodeEl) {
-       var initForm = function(html) {
-            $("#object_container").html(html);         
-
-            var $form = $('form',"#object_container");
-
-            $(".btn-cancel", $form).html("Revert Changes");
-            $(".btn-cancel", $form).before("<a id='save_and_finish_editing' class='btn btn-success' href='" + APP_PATH + "collections/" + collection_tree_data.collection_id + "'>Finish Editing</a>");
-            
-            $form.bind("form-changed", function() {
-                form_changed = true;                
-            });
-
-            $form.ajaxForm({
-                data: {
-                   inline: true
-                },
-                beforeSubmit: function() {
-                  $(".btn-primary", $form).attr("disabled","disabled");
-                },
-                success: function(response, status, xhr) {
-                   initForm(response);
-                   if ($("#object_container").find(".alert-error:first").length) {
-  
-                   } else {
-                      form_changed = false;
-                      rerenderTree();
-                   }
-                }, 
-                error: function(obj, errorText, errorDesc) {
-                  $(".btn-primary", $form).removeAttr("disabled");
-                }
-             });
-        };
-
         if (nodeEl.attr("rel") === "archival_object") {
             $.ajax({
-                url: APP_PATH+"archival_objects/"+nodeEl.attr("id")+"/edit?inline=true",
+                url: APP_PATH+"archival_objects/"+nodeEl.data("id")+"/edit?inline=true",
                 success: function(html) {
                     initForm(html);
                 }
             });
         } else if (nodeEl.attr("rel") === "collection") {         
              $.ajax({
-                url: APP_PATH+"collections/"+nodeEl.attr("id")+"/edit?inline=true",
+                url: APP_PATH+"collections/"+nodeEl.data("id")+"/edit?inline=true",
                 success: function(html) {
                     initForm(html);
                 }
@@ -102,41 +98,28 @@ $(function() {
       $(".archives-tree-container").on("click", ".add-child-archival-object-analog", function() {
          var $selected = $(".selected", $tree);
          if ($selected.length === 0) {
-            // no root node selected
-            // TODO pick a node
             return;
          }
          
-         var data = {};
+         var data = {
+            collection: collection_tree_data.collection_id
+         };
          
          if ($selected.attr("rel") === "archival_object") {
-            data.parent = $selected.attr("id");
+            data.parent = $selected.data("id");
          }
          
-         var open_nodes = [];
-         $(".jstree-open", $tree).map(function() {
-            open_nodes.push($(this).attr("id"));
-         });
-         
          $.ajax({
-            url: APP_PATH + "collections/"+collection_tree_data.collection_id + "/add_archival_object",
+            url: APP_PATH + "archival_objects/new",
             data: data,
-            type: "POST",
-            dataType: "json",
-            success: function(json) {
-               collection_tree_data = json.tree;
-               renderTree();
-               
-               var $new_node = $("#"+json.id, $tree);
-               $new_node.addClass("selected");
-               
-               for (var i=0; i<open_nodes.length; i++) {
-                  $("#"+open_nodes[i], $tree).addClass("jstree-open");
-               }
-               
-               initTree();
-               
-               loadPaneForNode($new_node);     
+            type: "GET",
+            success: function(html) {
+               initForm(html);
+               $tree.jstree("create_node", $selected, "last", {"attr":{"id": "newAO"}, "data": {"title": "New Analog Object"}});
+               $tree.jstree("open_node", $selected);
+               $tree.jstree("deselect_all");
+               $tree.jstree("select_node", "#newAO");
+               $("form", "#object_container").triggerHandler("formchanged");
             }, 
             error: function() {
                console.log("ERROR! $('.archives-tree-container').on('click', '.add-child-archival-object-analog')");
@@ -148,41 +131,28 @@ $(function() {
       $(".archives-tree-container").on("click", ".add-sibling-archival-object-analog", function() {
          var $selected = $(".selected", $tree);
          if ($selected.length === 0) {
-            // no root node selected
-            // TODO pick a node
             return;
          }
          
-         var data = {};
+         var data = {
+            collection: collection_tree_data.collection_id
+         };
          
          if ($selected.attr("rel") === "archival_object") {
-            data.parent = $selected.parents("li:first").attr("id");
+            data.parent = $selected.parents("li:first").data("id");
          }
          
-         var open_nodes = [];
-         $(".jstree-open", $tree).map(function() {
-            open_nodes.push($(this).attr("id"));
-         });
-         
          $.ajax({
-            url: APP_PATH + "collections/"+collection_tree_data.collection_id + "/add_archival_object",
+            url: APP_PATH + "archival_objects/new",
             data: data,
-            type: "POST",
-            dataType: "json",
-            success: function(json) {
-               collection_tree_data = json.tree;
-               renderTree();
-               
-               var $new_node = $("#"+json.id, $tree);
-               $new_node.addClass("selected");
-               
-               for (var i=0; i<open_nodes.length; i++) {
-                  $("#"+open_nodes[i], $tree).addClass("jstree-open");
-               }
-               
-               initTree();
-               
-               loadPaneForNode($new_node);     
+            type: "GET",
+            success: function(html) {
+               initForm(html);
+               $tree.jstree("create_node", $selected.parents("li:first"), "last", {"attr":{"id": "newAO"}, "data": {"title": "New Analog Object"}});
+               $tree.jstree("open_node", $selected.parents("li:first"));
+               $tree.jstree("deselect_all");
+               $tree.jstree("select_node", "#newAO");
+               $("form", "#object_container").triggerHandler("formchanged");    
             }, 
             error: function() {
                console.log("ERROR! $('.archives-tree-container').on('click', '.add-child-archival-object-analog')");
@@ -259,7 +229,6 @@ $(function() {
             $("li:first", $tree).addClass("selected");
          }
          $tree.jstree("open_node", $(".selected", $tree));
-         node_id_for_page = $(".selected", $tree).attr("id");
          $tree.jstree("select_node", $(".selected", $tree));
 
          loadTreeActionsForNode($(".selected", $tree));
