--- a/frontend/app/views/collections/_tree.html.erb
+++ b/frontend/app/views/collections/_tree.html.erb
@@ -12,7 +12,7 @@
       {if nodes.length > 0}
       <ul>
          {for node in nodes}
-            <li id="${node.id}" class="analog" rel="archival_object">
+            <li id="archival_object_${node.id}" class="analog" rel="archival_object" data-id="${node.id}">
                <a href="javascript:void(0)" title="${AS.encodeForAttribute(node.title)}">${node.title}</a>
                ${render_children(node.children)}
             </li>
@@ -22,7 +22,7 @@
    {/macro}
    
    {macro render_collection(node)}
-      <li id="${node.collection_id}" class="collection" rel="collection">
+      <li id="colletion_id_${node.collection_id}" class="collection" rel="collection" data-id="${node.collection_id}">
          <a href="javascript:void(0)" title="${AS.encodeForAttribute(node.title)}">${node.title}</a>
          ${render_children(tree.children)}
       </li>
