--- a/frontend/app/views/shared/_form_messages.html.erb
+++ b/frontend/app/views/shared/_form_messages.html.erb
@@ -1,26 +1,30 @@
-<% if errors %>
-   <div class="alert alert-error">
-      <% errors.each do |attr, messages| %>
-           <div class="errors-for_attr">
-             <% messages.each do |msg| %>
-               <div class="error"><%= I18n.t(:"#{object.class.record_type}.#{attr}") %> - <%= msg %></div>
-             <% end %>
-           </div>
-      <% end %>
-   </div>
-<% end %>
-<% if warnings %>
-   <div class="alert alert-warning">
-      <% warnings.each do |attr, messages| %>
-           <div class="errors-for_attr">
-             <% messages.each do |msg| %>
-               <div class="warning"><%= I18n.t(:"#{object.class.record_type}.#{attr}") %> - <%= msg %></div>
-             <% end %>
-           </div>
-      <% end %>
-      <br/>
-      <input type="submit" name="ignorewarnings" class="btn btn-warning" value="Save Anyway" />
-   </div>
+<% if not @isNew and not object._exceptions.empty? %>
+   <% if object._exceptions.has_key?(:errors) %>
+      <div class="alert alert-error">
+         <% object._exceptions[:errors].each do |attr, messages| %>
+              <div class="errors-for_attr">
+                <% messages.each do |msg| %>
+                  <div class="error"><%= I18n.t(:"#{object.class.record_type}.#{attr}") %> - <%= msg %></div>
+                <% end %>
+              </div>
+         <% end %>
+      </div>
+   <% end %>
+   <% if object._exceptions.has_key?(:warnings) %>
+      <div class="alert alert-warning">
+         <% object._exceptions[:warnings].each do |attr, messages| %>
+              <div class="errors-for_attr">
+                <% messages.each do |msg| %>
+                  <div class="warning"><%= I18n.t(:"#{object.class.record_type}.#{attr}") %> - <%= msg %></div>
+                <% end %>
+              </div>
+         <% end %>
+         <% if not object._exceptions.has_key?(:errors) %>
+            <br/>
+            <input type="submit" name="ignorewarnings" class="btn btn-warning" value="Save Anyway" />
+         <% end %>
+      </div>
+   <% end %>
 <% end %>
 <% if flash[:success] %>
    <div class="alert alert-success">
